--- a/index.html
+++ b/index.html
@@ -79,6 +79,13 @@
       </div>
     </div>
 
+<form action="https://shenghuo.alipay.com/send/payment/fill.htm" method="POST" target="_blank" accept-charset="GBK">
+    <input name="optEmail" type="hidden" value="funyoung@gmail.com" />
+    <input name="payAmount" type="hidden" value="10" />
+    <input id="title" name="title" type="hidden" value="捐赠funyoung项目" />
+    <input name="memo" type="hidden" value="从github.com出发" />
+    <input name="pay" type="image" value="转账" src="https://img.alipay.com/sys/personalprod/style/mc/btn-index.png" />
+</form>
   
   </body>
 </html>
